--- a/Symulator Intel 8086/MainWindow.xaml
+++ b/Symulator Intel 8086/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid Background="#FFB7D862">
-        <Grid Margin="1,212,0,0" Background="#FFBEE09C" Height="222" VerticalAlignment="Top" HorizontalAlignment="Left" Width="185">
+        <Grid Margin="1,173,0,0" Background="#FFBEE09C" Height="261" VerticalAlignment="Top" HorizontalAlignment="Left" Width="297">
 
             <TextBlock HorizontalAlignment="Left" Height="21" Margin="10,8,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="179"><Run Language="pl-pl" Text="Wybierz rozkaz"/></TextBlock>
             <ComboBox x:Name="Rozkaz" HorizontalAlignment="Left" Margin="10,34,0,0" VerticalAlignment="Top" Width="149" SelectionChanged="Rozkaz_SelectionChanged">
@@ -19,7 +19,7 @@
                 <ComboBoxItem Content="ADD"/>
                 <ComboBoxItem Content="SUB"/>
             </ComboBox>
-            <Button x:Name="Symuluj" Content="Symuluj&#xA;" HorizontalAlignment="Left" Margin="10,127,0,0" VerticalAlignment="Top" Width="149" Height="23" Click="Symuluj_Click"/>
+            <Button x:Name="Symuluj" Content="Symuluj&#xA;" HorizontalAlignment="Left" Margin="9,206,0,0" VerticalAlignment="Top" Width="149" Height="23" Click="Symuluj_Click"/>
             <ComboBox x:Name="rejestr1" HorizontalAlignment="Left" Margin="10,89,0,0" VerticalAlignment="Top" Width="74">
                 <ComboBoxItem Content="AH"/>
                 <ComboBoxItem Content="AL"/>
@@ -42,9 +42,18 @@
             </ComboBox>
             <TextBlock x:Name="nazwa_rejestr" HorizontalAlignment="Left" Height="21" Margin="10,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="74" TextAlignment="Center"><Run Language="pl-pl" Text="Rejestr 1"/></TextBlock>
             <TextBlock x:Name="rej2Nazwa" HorizontalAlignment="Left" Height="21" Margin="84,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="74" TextAlignment="Center"><Run Text="Rejestr "/><Run Language="pl-pl" Text="2"/><LineBreak/><Run Language="pl-pl"/></TextBlock>
+            <TextBox x:Name="Adres" HorizontalAlignment="Left" Height="23" Margin="85,130,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75" TextAlignment="Center" FontSize="16"/>
+            <TextBlock x:Name="nazwa_rejestr_Copy" HorizontalAlignment="Left" Height="21" Margin="9,132,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="74" TextAlignment="Center"><Run Language="pl-pl" Text="Adres:"/></TextBlock>
+            <ComboBox x:Name="kolejnosc" HorizontalAlignment="Left" Margin="86,167,0,0" VerticalAlignment="Top" Width="74">
+                <ComboBoxItem Content="Działaj na rejestrach"/>
+                <ComboBoxItem Content="Wartość adresu do rejestru"/>
+                <ComboBoxItem Content="Rejestr do wartości adresu"/>
+            </ComboBox>
+            <TextBlock x:Name="nazwa_rejestr_Copy1" HorizontalAlignment="Left" Height="21" Margin="12,168,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="74" TextAlignment="Center"><Run Language="pl-pl" Text="Kolejnosc:"/></TextBlock>
+            <Button x:Name="Sprawdz_adres" Content="&#xD;&#xA;" HorizontalAlignment="Left" Height="23" Margin="162,130,0,0" VerticalAlignment="Top" Width="23"/>
 
         </Grid>
-        <Grid Background="#FFBEE09C" Height="217" VerticalAlignment="Top" HorizontalAlignment="Left" Width="186">
+        <Grid Background="#FFBEE09C" Height="173" VerticalAlignment="Top" HorizontalAlignment="Left" Width="298">
             <Button x:Name="Przypisz" Content="Przypisz&#xD;&#xA;" HorizontalAlignment="Left" Margin="10,145,0,0" VerticalAlignment="Top" Width="79" Height="20" Click="Przypisz_Click"/>
             <TextBox x:Name="AHinput" Text="00" TextWrapping="Wrap" Margin="50,10,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="30" TextAlignment="Center"/>
             <TextBox x:Name="ALinput" Text="00" TextWrapping="Wrap" Margin="129,10,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="30" TextAlignment="Center"/>
@@ -63,26 +72,44 @@
             <TextBlock HorizontalAlignment="Left" Margin="101,44,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" Width="28"><Run Text="B"/><Run Language="pl-pl" Text="L"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
             <TextBlock HorizontalAlignment="Left" Margin="101,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" Width="28"><Run Text="C"/><Run Language="pl-pl" Text="L"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
             <TextBlock HorizontalAlignment="Left" Margin="101,108,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" Width="28"><Run Text="D"/><Run Language="pl-pl" Text="L"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBox x:Name="SIinput" Text="0000" TextWrapping="Wrap" Margin="209,10,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="40" TextAlignment="Center"/>
+            <TextBox x:Name="DIinput" Text="0000" TextWrapping="Wrap" Margin="209,42,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="40" TextAlignment="Center"/>
+            <TextBox x:Name="BPinput" Text="0000" TextWrapping="Wrap" Margin="209,0,0,0" Height="20" VerticalAlignment="Center" HorizontalAlignment="Left" Width="40" TextAlignment="Center"/>
+            <TextBlock x:Name="AL5_Copy" HorizontalAlignment="Left" Margin="181,12,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" Width="28"><Run Language="pl-pl" Text="SI:"/><LineBreak/><Run Language="pl-pl"/></TextBlock>
+            <TextBlock HorizontalAlignment="Left" Margin="181,44,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" Width="28"><Run Language="pl-pl" Text="DI"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock HorizontalAlignment="Left" Margin="181,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="18" Width="28"><Run Language="pl-pl" Text="BP"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
 
         </Grid>
-        <Grid Background="#FFBEE09C" Margin="265,14,0,0" HorizontalAlignment="Left" Width="502" Height="383" VerticalAlignment="Top">
-            <TextBlock x:Name="AL3" HorizontalAlignment="Left" Margin="266,62,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="54" Width="67" FontSize="30"><Run Text="A"/><Run Language="pl-pl" Text="L"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="AL3_Copy" HorizontalAlignment="Left" Margin="266,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="54" Width="67" FontSize="30"><Run Language="pl-pl" Text="B"/><Run Text="L"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="AL3_Copy1" HorizontalAlignment="Left" Margin="266,212,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="54" Width="67" FontSize="30"><Run Language="pl-pl" Text="C"/><Run Text="L"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="AL3_Copy2" HorizontalAlignment="Left" Margin="266,285,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="54" Width="67" FontSize="30"><Run Language="pl-pl" Text="D"/><Run Text="L"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="AL3_Copy3" HorizontalAlignment="Left" Margin="48,62,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="54" Width="67" FontSize="30"><Run Text="A"/><Run Language="pl-pl" Text="H"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="AL3_Copy4" HorizontalAlignment="Left" Margin="48,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="54" Width="67" FontSize="30"><Run Text="B"/><Run Language="pl-pl" Text="H"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="AL3_Copy5" HorizontalAlignment="Left" Margin="48,215,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="54" Width="67" FontSize="30"><Run Text="C"/><Run Language="pl-pl" Text="H"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="AL3_Copy6" HorizontalAlignment="Left" Margin="48,292,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="54" Width="67" FontSize="30"><Run Text="D"/><Run Language="pl-pl" Text="H"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+        <Grid Background="#FFBEE09C" Margin="298,0,0,0" HorizontalAlignment="Left" Width="502" Height="437" VerticalAlignment="Top">
+            <TextBlock x:Name="AL3" HorizontalAlignment="Left" Margin="198,61,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="49" FontSize="22"><Run Text="A"/><Run Language="pl-pl" Text="L"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy" HorizontalAlignment="Left" Margin="198,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="49" FontSize="22"><Run Language="pl-pl" Text="B"/><Run Text="L"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy1" HorizontalAlignment="Left" Margin="198,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="49" FontSize="22"><Run Language="pl-pl" Text="C"/><Run Text="L"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy2" HorizontalAlignment="Left" Margin="198,244,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="49" FontSize="22"><Run Language="pl-pl" Text="D"/><Run Text="L"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy3" HorizontalAlignment="Left" Margin="40,61,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="49" FontSize="22"><Run Text="A"/><Run Language="pl-pl" Text="H"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy4" HorizontalAlignment="Left" Margin="40,123,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="49" FontSize="22"><Run Text="B"/><Run Language="pl-pl" Text="H"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy5" HorizontalAlignment="Left" Margin="40,187,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="49" FontSize="22"><Run Text="C"/><Run Language="pl-pl" Text="H"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy6" HorizontalAlignment="Left" Margin="40,249,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="49" FontSize="22"><Run Text="D"/><Run Language="pl-pl" Text="H"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
             <TextBlock x:Name="AL3_Copy7" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="266" FontSize="30" Margin="120,0,0,0"><Run Language="pl-pl" Text="WYNIK REJESTRÓW"/></TextBlock>
-            <TextBlock x:Name="AHbox" HorizontalAlignment="Left" Margin="120,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="56" Width="113" FontSize="36" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run Language="pl-pl"/></TextBlock>
-            <TextBlock x:Name="BHbox" HorizontalAlignment="Left" Margin="120,131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="56" Width="113" FontSize="36" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="CHbox" HorizontalAlignment="Left" Margin="120,212,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="56" Width="113" FontSize="36" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="DHbox" HorizontalAlignment="Left" Margin="120,287,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="56" Width="113" FontSize="36" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="ALbox" HorizontalAlignment="Left" Margin="333,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="56" Width="113" FontSize="36" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="BLbox" HorizontalAlignment="Left" Margin="333,131,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="56" Width="113" FontSize="36" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="CLbox" HorizontalAlignment="Left" Margin="333,212,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="56" Width="113" FontSize="36" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
-            <TextBlock x:Name="DLbox" HorizontalAlignment="Left" Margin="333,287,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="56" Width="113" FontSize="36" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AHbox" HorizontalAlignment="Left" Margin="93,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="81" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run Language="pl-pl"/></TextBlock>
+            <TextBlock x:Name="BHbox" HorizontalAlignment="Left" Margin="93,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="81" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="CHbox" HorizontalAlignment="Left" Margin="93,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="81" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="DHbox" HorizontalAlignment="Left" Margin="93,246,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="81" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="ALbox" HorizontalAlignment="Left" Margin="247,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="82" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="BLbox" HorizontalAlignment="Left" Margin="247,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="82" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="CLbox" HorizontalAlignment="Left" Margin="247,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="82" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="DLbox" HorizontalAlignment="Left" Margin="247,246,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="82" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy8" HorizontalAlignment="Left" Margin="337,313,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="45" Width="62" FontSize="22"><Run Text="Adres"/><Run Language="pl-pl" Text=":"/></TextBlock>
+            <TextBlock x:Name="DHbox_Copy" HorizontalAlignment="Left" Margin="404,310,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="81" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="0000"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="DHbox_Copy1" HorizontalAlignment="Left" Margin="247,310,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="82" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="00"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy9" HorizontalAlignment="Left" Margin="142,313,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="90" FontSize="22"><Run Text="W"/><Run Language="pl-pl" Text="artość"/><Run Text=":"/></TextBlock>
+            <TextBlock x:Name="AL3_Copy10" HorizontalAlignment="Left" Margin="355,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="49" FontSize="22"><Run Language="pl-pl" Text="SI"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="DIBox" HorizontalAlignment="Left" Margin="404,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="82" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="0000"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="BXBox" HorizontalAlignment="Left" Margin="404,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="82" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="0000"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="BPBox" HorizontalAlignment="Left" Margin="404,246,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="82" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="0000"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy11" HorizontalAlignment="Left" Margin="355,118,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="49" FontSize="22"><Run Language="pl-pl" Text="DI"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy12" HorizontalAlignment="Left" Margin="355,184,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="49" FontSize="22"><Run Language="pl-pl" Text="BX"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="AL3_Copy13" HorizontalAlignment="Left" Margin="355,248,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="44" Width="49" FontSize="22"><Run Language="pl-pl" Text="BP"/><Run Text=" "/><Run Text=":"/><LineBreak/><Run/></TextBlock>
+            <TextBlock x:Name="SIBox" HorizontalAlignment="Left" Margin="404,56,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="46" Width="82" FontSize="34" Background="White" TextAlignment="Center"><Run Language="pl-pl" Text="0000"/><LineBreak/><Run/></TextBlock>
 
         </Grid>
 
